@@ -33,6 +33,7 @@ Release Notes - Apache Knox - Version 0.7.0
     * [KNOX-394] - Request and response URLs must be parsed as literals not templates
     * [KNOX-623] - Gateway provider rewriter doesn't support boolean attributes in HTML.
     * [KNOX-633] - Upgrade apache commons-collections
+    * [KNOX-638] - Hive dispatch failing for secure clusters
 
 ------------------------------------------------------------------------------
 Release Notes - Apache Knox - Version 0.6.0
